--- a/css/index.css
+++ b/css/index.css
@@ -350,11 +350,12 @@ figure.image {
 }
 
 .container .card .content {
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 }
 
 .container .card .content p {
+    font-size: 1.1em;
     color: rgba(11, 61, 11, 0.527);
     transition: 0.5s;
 }
