--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,33 +1,55 @@
 /*Estilos do formulário de cadastro home */
 
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+body {
+    background-image: url(../Imagens/Agro.jpeg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
+}
 
-.form-doador{
-    display: none;
+.form-doador {
+    display: flex;
+    justify-content: center;
     flex-direction: column;
     padding: 10px;
 }
 
-.form-doador label{
-    padding-bottom: 10px;
-    padding-top: 10px;
+.form-doador h2 {
+    color: #fff;
+    font-size: 2.5rem;
+    font-weight: 300;
 }
 
-input{
+.form-doador label {
+    padding-bottom: 10px;
+    padding-top: 10px;
+    color: rgba(3, 3, 3, 0.993);
+    font-weight: 400;
+}
+
+input {
     width: 100%;
     height: 30px;
     padding: 5px;
 }
 
-select{
+select {
     font-size: 1em;
     width: 200px;
     height: 40px;
     padding: 5px;
 }
 
-.form-doador [type = submit] {
+label {
+    font-size: 1.5rem;
+}
+
+.form-doador [type=submit] {
     cursor: pointer;
-    height: 40px;    
+    height: 40px;
     font-size: 1em;
     font-weight: bold;
     margin: auto;
@@ -36,23 +58,22 @@ select{
     margin-top: 25px;
 }
 
-.form-doador [type = submit]:hover{
+.form-doador [type=submit]:hover {
     opacity: 0.8;
 }
 
-@media (min-width:640px){
-    .form-doador [type = submit]{        
+@media (min-width:640px) {
+    .form-doador [type=submit] {
         margin-left: 0;
         width: 200px;
     }
-
-    input{
+    input {
         width: 400px;
     }
 }
 
 @media (min-width:1008px) {
-    .form-doador{
+    .form-doador {
         width: 50%;
     }
 }
