--- a/css/formulario.css
+++ b/css/formulario.css
@@ -34,12 +34,14 @@ body {
 }
 
 .formulario-container {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
 .form-doador {
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -57,7 +59,7 @@ body {
     font-weight: 400;
 }
 
-input {
+.form-doador input {
     width: 100%;
     height: 30px;
     padding: 5px;
@@ -65,7 +67,7 @@ input {
 
 select {
     font-size: 1em;
-    width: 200px;
+    width: 200px; 
     height: 40px;
     padding: 5px;
 }
@@ -98,7 +100,7 @@ label {
         width: 400px;
     }
 }
-
+ /*
 @media (min-width:1008px) {
     .form-doador {
         width: 50%;
