--- a/css/formulario.css
+++ b/css/formulario.css
@@ -2,14 +2,14 @@
 /*Estilos do formulário de cadastro home modal */
 
 .formulario-modal{
-    position: fixed;
-    display: none;
+    position: absolute;
+    display: block;
     border: 2px solid #3E5902;
     background-color: #e3f4d7;
     border-radius: 20px;
-    width: 370px;
+    width: 80%;
     height: auto;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
@@ -119,6 +119,10 @@ label {
     .form-doador [type=submit], .form-coleta [type=submit]{
         width: 180px;
     } 
+
+    .formulario-modal{
+        width: 50%;
+    }
        
    
 }
