--- a/css/style.css
+++ b/css/style.css
@@ -1,85 +1,177 @@
-/*Estilos gerais do site*/
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap");
-
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    font-family: "Source Sans Pro", "Times New Roman";
-}
-
-main p{
-    font-size: 1.2em;
-}
-
-
-footer {
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #3E5902;
-    height: auto;
-    width: 100vw;
-    padding-top: 40px;
-    color: #FFF;
-}
-
-.footer-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.footer-content h3 {
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 3rem;
-}
-
-.footer-content p {
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
-}
-
-.socials {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
-}
-
-.socials li {
-    margin: 0 10px;
-}
-
-.socials a {
-    text-decoration: none;
-    color: #FFF;
-}
-
-.socials a img {
-    font-size: 1.1rem;
-    transition: color .4s ease;
-    width: 30px;
-    border-radius: 50%;
-}
-
-.footer-bottom {
-    background-color: #3E5902;
-    width: 100vw;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.footer-bottom p {
-    font-size: 14px;
-    word-spacing: 2px;
-    text-transform: capitalize;
-}
+                /*Estilos gerais do site*/
+                
+                @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap");
+                * {
+                    box-sizing: border-box;
+                    margin: 0;
+                    padding: 0;
+                    outline: 0;
+                    font-family: "Source Sans Pro", "Times New Roman";
+                }
+                
+                main p {
+                    font-size: 1.2em;
+                }
+                /*FOOTER*/
+                
+                footer {
+                    display: flex;
+                    background: #3E5902;
+                    height: auto;
+                    width: 100vw;
+                    font-size: 0.8em;
+                    height: auto;
+                    color: #FFF;
+                    font-family: sans;
+                    bottom: 0;
+                    margin-top: 20px;
+                    text-align: center;
+                    font-size: 1rem;
+                    line-height: 20px;
+                    bottom: 0;
+                }
+                
+                footer div {
+                    display: flex;
+                    width: 100px;
+                    height: 100px;
+                }
+                
+                footer h3 {
+                    display: flex;
+                    justify-content: space-around;
+                    margin-top: 10px;
+                    font-weight: 300px;
+                }
+                
+                footer h4 {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                
+                .coluna {
+                    display: inline-block;
+                    justify-content: center;
+                    width: 100%;
+                    flex-direction: column;
+                }
+                
+                #col1 {
+                    display: flex;
+                    justify-content: space-around;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    text-align: flex-start;
+                    margin-left: 20px;
+                    margin-top: 10px;
+                }
+                
+                #col2 {
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 10px;
+                }
+                
+                #col3 {
+                    display: flex;
+                    flex-direction: row;
+                }
+                
+                .socials {
+                    list-style: none;
+                    display: flex;
+                    align-items: center;
+                    margin: 1rem 0 3rem 0;
+                }
+                
+                .socials li {
+                    margin: 0 10px;
+                }
+                
+                .socials a {
+                    text-decoration: none;
+                    color: #FFF;
+                }
+                
+                .socials a img {
+                    font-size: 1.1rem;
+                    transition: color .4s ease;
+                    width: 30px;
+                    border-radius: 50%;
+                }
+                
+                .contact {
+                    display: flex;
+                    flex-direction: row;
+                }
+                
+                form {
+                    display: flex;
+                    justify-content: space-between;
+                    flex-direction: row;
+                    padding: 20px;
+                }
+                
+                .contact {
+                    display: inline;
+                    padding: 10px;
+                    flex-direction: row;
+                }
+                
+                #contact-form {
+                    text-align: center;
+                }
+                
+                .media-content p {
+                    padding: 10px;
+                    font-size: 1.1em;
+                    font-weight: bold;
+                }
+                
+                .contact label,
+                .contact input {
+                    margin-bottom: 15px;
+                }
+                
+                .contact label {
+                    font-weight: bold;
+                    color: #011640;
+                }
+                
+                .contact input {
+                    width: 80%;
+                    background-color: #79BAF2;
+                    border: none;
+                    border-bottom: 1px dashed #011640;
+                    padding: 5px;
+                }
+                
+                .contact textarea {
+                    width: 90%;
+                    height: 100px;
+                    resize: none;
+                    padding: 5px;
+                    border: 1px solid #f5f6f3;
+                    margin-bottom: 10px;
+                    border-radius: 5px;
+                    box-shadow: 0 0 0.5em #011640;
+                }
+                
+                #submit-contact {
+                    background-color: #f5f6f3;
+                    width: 30%;
+                    padding: 10px;
+                    border: 1px solid #f5f6f3;
+                    border-radius: 5px;
+                    font-weight: bold;
+                    color: #011640;
+                    text-transform: uppercase;
+                    box-shadow: 0 0 0.5em #011640;
+                }
+                
+                #submit-contact:hover {
+                    opacity: 0.7;
+                    cursor: pointer;
+                    border: 1px solid #011640;
+                }
