ajustes modal login, formulário coleta transformado em modal

--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,7 +1,7 @@
 
 /*Estilos do formulário de cadastro home modal */
 
-.formulario-modal, .modalLogin{
+.formulario-modal, .modal-doacao{
     position: absolute;
     display: none;
     border: 2px solid #3E5902;
@@ -9,7 +9,7 @@
     border-radius: 20px;
     width: 80%;
     height: auto;
-    top: 60%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
@@ -34,7 +34,9 @@
     margin-bottom: 5px;    
 }
 
-.form-doador [type=submit] , .form-coleta [type=submit] {
+.form-doador [type=submit] , 
+.form-coleta [type=submit], 
+.modalLogin [type=submit] {
     display: block;
     cursor: pointer;
     background-color: #618c03;
@@ -48,7 +50,9 @@
     box-shadow: 0 0 0.5em black;
 }
 
-.form-doador [type=submit]:hover, .form-coleta [type=submit]:hover {
+.form-doador [type=submit]:hover, 
+.form-coleta [type=submit]:hover,
+.modalLogin [type=submit]:hover {
     opacity: 0.8;
 }
 
@@ -96,13 +100,10 @@ label {
 /*Estilos formulário coleta*/
 
 .form-coleta{
-    display: none;
-    width: 100%;    
-    background-color: #e3f4d7;
-    flex-direction: column;
-    padding: 20px;    
-    animation: animatemodal;
-    animation-duration: 800ms;
+    width: 100%; 
+    flex-direction: column; 
+    padding: 10px;
+
 }
 
 .form-coleta p{
@@ -115,6 +116,29 @@ label {
 
 /* Estilos modal login */
 
+.modalLogin{
+    position: absolute;
+    display: none;
+    border: 2px solid #3E5902;
+    background-color: #e3f4d7;
+    border-radius: 20px;
+    width: 80%;
+    height: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    animation: animatemodal;
+    animation-duration: 800ms;
+
+}
+
+.modalInternLogin{
+    width: 100%; 
+    flex-direction: column; 
+    padding: 20px;
+}
+
 
 @media (min-width:640px) {  
       
@@ -122,9 +146,10 @@ label {
         width: 180px;
     } 
 
-    .formulario-modal{
+    .formulario-modal, .modal-doacao, .modalLogin{
         width: 50%;
     }
+    
        
    
 }
