--- a/css/index.css
+++ b/css/index.css
@@ -123,6 +123,12 @@ section {
     color: var(--cor-primaria-success);
     background-color: var(--cor-secundaria-success);
 }
+.gallery-container .gallery-items .Galery {
+    background-color:#f2f2f2;
+    padding: 10px;
+    font-size: 20px;
+    border: none;
+}
 
 /*Sessão galeria */
 
