--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ h1 {
 p {
     text-align: center;
 }
-
+ /*VERIFICAR SE ESTÀ SENDO UTILIZADO
 .cards1 img {
     display: inline-block;
     justify-content: center;
@@ -34,7 +34,7 @@ p {
     margin: 30px;
     width: 30%;
     margin-top: 40px;
-}
+} */
 
 section .botao {
     background-color: #618c03;
