--- a/css/pontosColeta.css
+++ b/css/pontosColeta.css
@@ -46,18 +46,17 @@ h1 {
     margin-top: 40px;
 }
 
-.sessao-depoimentos {
-    background-color: rgb(242, 242, 242);
-    width: 100%;
-}
-
 .depoimento {
-    display: inline-block;
-    justify-content: space-around;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    flex-direction: row;
     padding: 10px;
     flex-wrap: wrap;
+    background-color: rgb(242, 242, 242);
+    margin-top: 20px;
+    margin-left: 40px;
+    padding-top: 20px;
+    width: 100%;
 }
 
 #container {
@@ -65,6 +64,7 @@ h1 {
     display: inline-block;
     justify-content: space-around;
     align-items: center;
+    padding: 20px;
     width: 350px;
     height: 500px;
 }
@@ -119,6 +119,7 @@ h1 {
     background: rgb(242, 242, 242);
     color: rgb(77, 92, 63);
     transform: rotateY(180deg);
+    border: 3px solid rgb(62, 89, 2);
 }
 
 #atras h2 {
@@ -127,12 +128,15 @@ h1 {
     align-items: center;
     font-size: 3rem;
     margin-top: 15px;
+    text-shadow: inset 0 0 1em rgba(188, 231, 160, 0.582), 0 0 1em rgba(63, 73, 55, 0.733);
+    text-decoration-line: underline overline;
 }
 
 #atras p {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-size: 1.5rem;
     margin-top: 15px;
     padding: 6px;
@@ -142,9 +146,19 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
+    margin-bottom:
 }
 
-button{
+.texto-depoimento h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(77, 62, 63);
+    text-decoration: inset 0 0 1em rgba(188, 231, 160, 0.582), 0 0 1em rgba(63, 73, 55, 0.733);
+}
+
+button {
     display: block;
     cursor: pointer;
     background-color: #618c03;
@@ -155,6 +169,5 @@ button{
     text-align: center;
     width: 50%;
     margin: 20px auto;
-    box-shadow: 0 0 0.5em black; 
+    box-shadow: 0 0 0.5em black;
 }
-
