--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@
 
 * {
     box-sizing: border-box;
+    
     margin: 0;
     padding: 0;
     outline: 0;
+    
     font-family: "Source Sans Pro", "Times New Roman";
 }
 
@@ -16,75 +18,38 @@ main p {
 
 /*FOOTER*/
 
-footer {
-    display: flex;
+.footer {
+    display: grid;
+    grid-template-columns: 2fr 2fr 3fr;
     background: #3E5902;
-    height: auto;
+    
     width: 100vw;
     font-size: 0.8em;
-    height: auto;
     color: #FFF;
     font-family: sans;
-    bottom: 0;
     margin-top: 20px;
-    text-align: center;
+    text-align: left;
     font-size: 1rem;
     line-height: 20px;
     bottom: 0;
 }
-
-footer div {
-    display: flex;
-    width: 100px;
-    height: 100px;
+#col1{
+   margin: 15% auto;
+    text-align: left;
 }
+.col2align{
+    
+margin: 15% auto;
+text-align:center;
 
-footer h3 {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 10px;
-    font-weight: 300px;
 }
-
-footer h4 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.coluna {
-    display: inline-block;
-    justify-content: center;
-    width: 100%;
-    flex-direction: column;
-}
-
-#col1 {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: flex-start;
-    margin-left: 20px;
-    margin-top: 10px;
-}
-
-#col2 {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-}
-
-#col3 {
-    display: flex;
-    flex-direction: row;
-}
-
 .socials {
     list-style: none;
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin: 1rem 0 3rem 0;
+    margin: 3rem 0 3rem 0;
+
 }
 
 .socials li {
@@ -102,78 +67,18 @@ footer h4 {
     width: 30px;
     border-radius: 50%;
 }
-
-.contact {
-    display: flex;
-    flex-direction: row;
+#txtCont{
+    margin: 1.5% 5%;
 }
+#col3{
+    justify-content: space-evenly;
 
-form {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    padding: 20px;
 }
-
-.contact {
-    display: inline;
-    padding: 10px;
-    flex-direction: row;
-}
-
-#contact-form {
-    text-align: center;
-}
-
-.media-content p {
-    padding: 10px;
-    font-size: 1.1em;
-    font-weight: bold;
-}
-
-.contact label,
-.contact input {
-    margin-bottom: 15px;
-}
-
-.contact label {
-    font-weight: bold;
-    color: #011640;
-}
-
-.contact input {
+#nameForm, #mailForm, #messageForm{
     width: 80%;
-    background-color: #79BAF2;
-    border: none;
-    border-bottom: 1px dashed #011640;
-    padding: 5px;
+    margin-left: 5%;
 }
-
-.contact textarea {
-    width: 90%;
-    height: 100px;
-    resize: none;
-    padding: 5px;
-    border: 1px solid #f5f6f3;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 0.5em #011640;
-}
-
-#submit-contact {
-    background-color: #f5f6f3;
-    width: 30%;
-    padding: 10px;
-    border: 1px solid #f5f6f3;
-    border-radius: 5px;
-    font-weight: bold;
-    color: #011640;
-    text-transform: uppercase;
-    box-shadow: 0 0 0.5em #011640;
-}
-
-#submit-contact:hover {
-    opacity: 0.7;
-    cursor: pointer;
-    border: 1px solid #011640;
+#submit-contact{
+    width: 20%;
+    margin-left: 5%;
 }
