--- a/css/pontosColeta.css
+++ b/css/pontosColeta.css
@@ -44,6 +44,7 @@ h1 {
     font-size: 3rem;
     font-weight: 700px;
     margin-top: 40px;
+    text-align: center;
 }
 
 .depoimento {
@@ -147,7 +148,7 @@ h1 {
     justify-content: center;
     align-items: center;
     padding: 20px;
-    margin-bottom:
+    
 }
 
 .texto-depoimento h1 {
