--- a/css/pontosColeta.css
+++ b/css/pontosColeta.css
@@ -36,6 +36,31 @@ body {
     opacity: 1.0;
 }
 
+/* Estilos para a lista de cadastrados */
+
+.listaPontosdeColeta{
+    margin: 20% 10%;
+    border: #593e25 5px solid;
+    height: 500px;
+    border-radius: 2%;
+    justify-content: center;
+    align-items: center;
+    display:flex;
+    flex-direction: column;
+}
+.retangEnderecos{
+    display: flex;
+    flex-direction: column;
+    margin: 1% 3%;
+    border: #57c346 2px solid;
+    height: auto;
+    width: 80%;
+}
+#btnnConect{
+    right: 5px;
+    width:3px;
+    height: 3px;
+}
 
 /*Estilos cards Depoimento*/
 
@@ -56,6 +81,7 @@ h1 {
     background-color: rgb(242, 242, 242);
     margin-top: 20px;
     margin-left: 40px;
+    margin-right: 40px;
     padding-top: 20px;
     width: 100%;
 }
