--- a/css/header.css
+++ b/css/header.css
@@ -85,8 +85,9 @@ header .menu{
 @media (max-width:640px){
   
     .nav-list{
+        display: none;
         position: absolute;
-       top: 9vh;
+        top: 9vh;
         right: 0;
         width: 100%;
         height: auto;
@@ -94,8 +95,7 @@ header .menu{
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
+        /*transition: transform 0.5s ease-in;*/
         z-index: 10;
     }
 
@@ -112,7 +112,7 @@ header .menu{
     }
 
     .nav-list.active{
-        transform: translateX(0);
+        display: flex;
     }
 
     .mobile-menu{
