--- a/css/header.css
+++ b/css/header.css
@@ -94,8 +94,9 @@ header .menu{
         background: #3E5902;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        /*transition: transform 0.5s ease-in;*/
+        justify-content: space-around;        
+        animation: animateheader;
+        animation-duration: 600ms;
         z-index: 10;
     }
 
@@ -129,4 +130,12 @@ header .menu{
     to{
         opacity: 1;
     }
+}
+
+@keyframes animateheader {
+    from{opacity: 1;}
+        
+    
+    from {opacity: 0;}
+    
 }
