--- a/css/pontosColeta.css
+++ b/css/pontosColeta.css
@@ -2,6 +2,7 @@
 html,
 body {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 .opacity {
@@ -15,6 +16,10 @@ h2 {
     color: #618c03;
     font-size: 2.2em;
     font-weight: 400;
+}
+
+.cadastro {
+    margin: 100px auto;
 }
 
 .box {
