--- a/css/header.css
+++ b/css/header.css
@@ -1,67 +1,65 @@
 /*Estilos do header*/
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    overflow-x: hidden;
+body {
+  overflow-x: hidden;
 }
 
-
-header .menu{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #3E5902;
-    height: 9vh;
+header .menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #3e5902;
+  height: 9vh;
 }
 
-.menu a{    
-    color: #f2f2f2;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: 0.3s;
+.menu a {
+  color: #f2f2f2;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.3s;
 }
 
-.menu li:hover{    
-    background-color: #BBC892;
-    opacity: 0.7;
+.menu li:hover {
+  background-color: #8eca0b;
+  opacity: 0.7;
 }
 
-.menu li:hover a {    
-    color: #3e5902;
+.menu li:hover a {
+  color: #3e5902;
 }
 
-.nav-list{
-    display: flex;
-    list-style: none;
+.nav-list {
+  display: flex;
+  list-style: none;
 }
 
-.nav-list li{
-    cursor: pointer;
-    padding: 20px;
+.nav-list li {
+  cursor: pointer;
+  padding: 20px;
 }
 
-
-.logo{
-    font-size: 24px;
-    margin-left: 20px;
+.logo {
+  font-size: 24px;
+  margin-left: 20px;
 }
 
 .mobile-menu {
-    display: none;
-    cursor: pointer;
+  display: none;
+  cursor: pointer;
 }
 
 .mobile-menu > div {
-    width: 32px;
-    height: 4px;
-    border-radius: 2px;
-    background-color: #f2f2f2;
-    margin: 8px;
-    transition: 0.3s;
+  width: 32px;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #f2f2f2;
+  margin: 8px;
+  transition: 0.3s;
 }
 
 /* não está formando x (testar depois) 
@@ -78,55 +76,51 @@ header .menu{
 }
  */
 
-
-
 /*Menu mobile*/
 
-@media (max-width:640px){
-  
-    .nav-list{
-        position: absolute;
-       top: 9vh;
-        right: 0;
-        width: 100%;
-        height: auto;
-        background: #3E5902;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-        z-index: 10;
-    }
+@media (max-width: 640px) {
+  .nav-list {
+    position: absolute;
+    top: 9vh;
+    right: 0;
+    width: 100%;
+    height: auto;
+    background: #3e5902;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+    z-index: 10;
+  }
 
-    .nav-list li{
-        text-align: center;
-        width: 100%;
-        padding: 20px 0 20px 0;
-        border-bottom: 1px solid #f2f2f2;
-    }
+  .nav-list li {
+    text-align: center;
+    width: 100%;
+    padding: 20px 0 20px 0;
+    border-bottom: 1px solid #f2f2f2;
+  }
 
-    .nav-list a{
-        display: block;
-        width: 100%;
-    }
+  .nav-list a {
+    display: block;
+    width: 100%;
+  }
 
-    .nav-list.active{
-        transform: translateX(0);
-    }
+  .nav-list.active {
+    transform: translateX(0);
+  }
 
-    .mobile-menu{
-        display: block;
-    }
+  .mobile-menu {
+    display: block;
+  }
 }
 
-
-@keyframes navLinkFade{
-    from{
-        opacity: 0;
-        transform: translateX(40px);
-    }
-    to{
-        opacity: 1;
-    }
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(40px);
+  }
+  to {
+    opacity: 1;
+  }
 }
