--- a/css/pontosColeta.css
+++ b/css/pontosColeta.css
@@ -1,224 +1,275 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2? family= Mukta:wght@200;500 & family= Nunito+Sans:ital,wght@1,200;1,400 & family= Raleway:wght@ 300 & family= Staatliches & display=swap");
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 .opacity {
-    width: 100%;
-    height: 400px;
-    background-color: black;
+  width: 100%;
+  height: 400px;
+  background-color: black;
 }
 
-h2 {    
-    text-align: center;
-    color: #618c03;
-    font-size: 2.2em;
-    font-weight: 400;
+h2 {
+  text-align: center;
+  color: #618c03;
+  font-size: 2.2em;
+  font-weight: 400;
 }
 
 .box {
-    width: 100%;
-    height: 400px;
-    background-image: url(../Imagens/Agro.jpeg);
-    opacity: 0.5;
-    transition: 2.5s;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+  width: 100%;
+  height: 400px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../Imagens/img11.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
+.text-box {
+  padding-top: 5%;
+  flex: 1 1 350px;
+  animation: slideContent 0.4s linear 0.4s;
+}
+
+@keyframes slideContent {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+}
+
+.text-box h3 {
+  font-size: 35px;
+  color: #8eca0b;
+  padding: 2%;
+  font-family: "Noto Sans", sans-serif;
+}
+.text-box p {
+  text-align: left;
+  padding-left: 2%;
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  font-family: "Noto Sans", sans-serif;
+  padding-bottom: 5px;
+  width: 40%;
+  height: 10%;
+}
+.text-box a {
+  text-decoration: none;
+  font-size: 25px;
+  color: #ffffff;
+  background: #3e5902;
+  border-radius: 5px;
+  padding: 9px 40px;
+  transition: 0.5s ease all;
+  font-family: "Noto Sans", sans-serif;
+}
+.text-box a:hover {
+  background: #8eca0b;
+  color: #ffffff;
+}
 .box:hover {
-    opacity: 1.0;
+  opacity: 1;
 }
 
 button {
-    display: block;
-    cursor: pointer;
-    background-color: #3E5902;
-    border: 1px solid #3E5902;
-    color: white;
-    height: 40px;
-    font-size: 1em;
-    font-weight: bold;
-    text-align: center;
-    width: 230px;
-    margin: 20px auto;
-    box-shadow: 0 0 0.5em black;
-    border-radius: 20px;
+  display: block;
+  cursor: pointer;
+  background-color: #3e5902;
+  color: white;
+  height: 40px;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  width: 230px;
+  margin: 20px auto;
+  box-shadow: 0 0 0.5em black;
+  border-radius: 20px;
+  transition: 0.5s ease all;
+}
+button:hover {
+  background: #8eca0b;
+  border: none;
+  color: #ffffff;
+  transform: scale(1.1);
+  box-shadow: 0 0 5em yellow;
 }
 
 /* Estilos para a lista de cadastrados */
 
-.listaPontosdeColeta{
-    display:flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 100%;
-    margin: 30px auto;
-    padding: 30px;
-    background-color: #3E5902;
-    height: auto;
+.listaPontosdeColeta {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 30px auto;
+  padding: 30px;
+  background-color: #3e5902;
+  height: auto;
 }
-.retangEnderecos{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #e3f4d7;
-    border-radius: 20px;
-    margin: 20px;
-    width: 300px;
-    height: 250px;
-}
-
-.titulo{
-    display: block;
-    width: 100%;
-    text-align: center;
+.retangEnderecos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #e3f4d7;
+  border-radius: 20px;
+  margin: 20px;
+  width: 300px;
+  height: 250px;
 }
 
-.titulo h2{
-    color: white;
-    padding-bottom: 30px;
+.titulo {
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 
-.retangEnderecos img{
-    width: 50px;
-    height: 50px;
-    padding-left: 10px;
+.titulo h2 {
+  color: white;
+  padding-bottom: 30px;
 }
 
-.retangEnderecos p{
-    padding: 10px;
+.retangEnderecos img {
+  width: 50px;
+  height: 50px;
+  padding-left: 10px;
 }
 
-#btnnConect{
-    right: 5px;
-    width:3px;
-    height: 3px;
+.retangEnderecos p {
+  padding: 10px;
+}
+
+#btnnConect {
+  right: 5px;
+  width: 3px;
+  height: 3px;
 }
 
 /*Estilos cards Depoimento*/
 
 h1 {
-    font-family: sans;
-    font-size: 3rem;
-    font-weight: 700px;
-    margin-top: 40px;
-    text-align: center;
+  font-family: sans;
+  font-size: 3rem;
+  font-weight: 700px;
+  margin-top: 40px;
+  text-align: center;
 }
 
 .depoimento {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    flex-wrap: wrap;
-    background-color: rgb(242, 242, 242);
-    margin-top: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
-    padding-top: 20px;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  flex-wrap: wrap;
+  background-color: rgb(242, 242, 242);
+  margin-top: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-top: 20px;
+  width: 100%;
 }
 
 #container {
-    position: relative;
-    display: inline-block;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    width: 350px;
-    height: 500px;
+  position: relative;
+  display: inline-block;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+  width: 350px;
+  height: 500px;
 }
 
 #carta {
-    width: 90%;
-    height: 90%;
-    transform-style: preserve-3d;
-    transition: all 1.0s ease;
-    border-radius: 10%;
-    box-shadow: inset 0 0 1em rgba(188, 231, 160, 0.582), 0 0 1em rgba(63, 73, 55, 0.733)
+  width: 90%;
+  height: 90%;
+  transform-style: preserve-3d;
+  transition: all 1s ease;
+  border-radius: 10%;
+  box-shadow: inset 0 0 1em rgba(188, 231, 160, 0.582),
+    0 0 1em rgba(63, 73, 55, 0.733);
 }
 
 #container img {
-    width: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+  width: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
 
 #frente h3 {
-    display: flex;
-    align-items: center;
-    font-size: 2rem;
-    margin-top: 20px;
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  margin-top: 20px;
 }
 
 #container:hover #carta {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 #frente {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background: #e3f4d8;
-    color: #78A614;
-    padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background: #e3f4d8;
+  color: #78a614;
+  padding: 10px;
 }
 
 #atras {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background: rgb(242, 242, 242);
-    color: rgb(77, 92, 63);
-    transform: rotateY(180deg);
-    border: 3px solid rgb(62, 89, 2);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background: rgb(242, 242, 242);
+  color: rgb(77, 92, 63);
+  transform: rotateY(180deg);
+  border: 3px solid rgb(62, 89, 2);
 }
 
 #atras h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3rem;
-    margin-top: 15px;
-    text-shadow: inset 0 0 1em rgba(188, 231, 160, 0.582), 0 0 1em rgba(63, 73, 55, 0.733);
-    text-decoration-line: underline overline;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  margin-top: 15px;
+  text-shadow: inset 0 0 1em rgba(188, 231, 160, 0.582),
+    0 0 1em rgba(63, 73, 55, 0.733);
+  text-decoration-line: underline overline;
 }
 
 #atras p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 1.5rem;
-    margin-top: 15px;
-    padding: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1.5rem;
+  margin-top: 15px;
+  padding: 6px;
 }
 
 .texto-depoimento {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
 .texto-depoimento h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(77, 62, 63);
-    text-decoration: inset 0 0 1em rgba(188, 231, 160, 0.582), 0 0 1em rgba(63, 73, 55, 0.733);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(77, 62, 63);
+  text-decoration: inset 0 0 1em rgba(188, 231, 160, 0.582),
+    0 0 1em rgba(63, 73, 55, 0.733);
 }
-
