--- a/css/pontosColeta.css
+++ b/css/pontosColeta.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 .text-box {
-  padding-top: 5%;
+  padding-top: 100px;
   flex: 1 1 350px;
   animation: slideContent 0.4s linear 0.4s;
 }
@@ -50,16 +50,19 @@ h2 {
 .text-box p {
   text-align: left;
   padding-left: 2%;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
   font-size: 20px;
   font-weight: bold;
   color: #ffffff;
   font-family: "Noto Sans", sans-serif;
-  padding-bottom: 5px;
+
   width: 40%;
   height: 10%;
 }
 .text-box a {
   text-decoration: none;
+  margin-left: 2%;
   font-size: 25px;
   color: #ffffff;
   background: #3e5902;
