--- a/css/header.css
+++ b/css/header.css
@@ -18,7 +18,7 @@ header .menu{
     height: 9vh;
 }
 
-.menu a{    
+.menu a, .menu li{    
     color: #f2f2f2;
     text-decoration: none;
     text-transform: uppercase;
@@ -63,22 +63,6 @@ header .menu{
     margin: 8px;
     transition: 0.3s;
 }
-
-/* não está formando x (testar depois) 
-.mobile-menu.active .line1{
-    transform: rotate(-45deg) translate(-8px, 8px); 
-}
-
-.mobile-menu.active .line2{
-    opacity: 0;
-}
-
-.mobile-menu.active .line3{
-    transform: rotate(45deg) translate(-5px, 5px);     
-}
- */
-
-
 
 /*Menu mobile*/
 
